--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -17,12 +17,16 @@
 
     <color name="txt_black">#232323</color>
     <color name="txt_gray">#565656</color>
+    <color name="txt_white">#ecf0f1</color>
+    <color name="txt_emerald">#ccff00</color>
     <color name="txt_light_gray">#898989</color>
 
     <color name="bg_gray">#f2f2f2</color>
     <color name="bg_gray_dark">#cdcdcd</color>
+    <color name="bg_dark">#2E2E2E</color>
     <color name="bg_agray">#49dddddd</color>
     <color name="bg_gray_pressed">#e8e8e8</color>
+    <color name="bg_white">#ecf0f1</color>
     <color name="txt_at_blue">#507daf</color>
     <color name="bg_gray_bar">#f9f9f9</color>
     <color name="divider_gray">#d7d7d7</color>
