--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/bg_gray"
+    android:background="@color/bg_dark"
     android:orientation="vertical" >
 
     <FrameLayout
@@ -14,14 +14,14 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/divider_gray" />
+        android:background="@color/bg_dark" />
 
     <RadioGroup
         android:id="@+id/rg_tab"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:layout_gravity="bottom"
-        android:background="#fafafa"
+        android:background="@color/bg_dark"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
@@ -29,34 +29,17 @@
             android:id="@+id/rb_home"
             style="@style/RadioButtonBottomTab"
             android:checked="true"
-            android:drawableTop="@drawable/icon_home"
-            android:text="首页" />
+            android:text="挑战" />
 
         <RadioButton
             android:id="@+id/rb_meassage"
             style="@style/RadioButtonBottomTab"
-            android:drawableTop="@drawable/icon_meassage"
-            android:text="消息" />
-
-        <ImageView
-            android:id="@+id/iv_add"
-            android:layout_width="56dp"
-            android:layout_height="40dp"
-            android:padding="8dp"
-            android:src="@drawable/icon_add"
-            android:background="@drawable/correct_oran_sel" />
+            android:text="战绩" />
 
         <RadioButton
-            android:id="@+id/rb_search"
-            style="@style/RadioButtonBottomTab"
-            android:drawableTop="@drawable/icon_square"
-            android:text="发现" />
-
-        <RadioButton
-            android:drawableTop="@drawable/icon_selfinfo"
             android:id="@+id/rb_user"
             style="@style/RadioButtonBottomTab"
-            android:text="我" />
+            android:text="设置" />
     </RadioGroup>
 
 </LinearLayout>
