--- a/src/main/res/layout/frag_home.xml
+++ b/src/main/res/layout/frag_home.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_gray"
+    android:background="@color/bg_dark"
     android:orientation="vertical" >
 
     <include layout="@layout/include_titlebar"/>
