--- a/src/main/res/layout/frag_search.xml
+++ b/src/main/res/layout/frag_search.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/bg_gray"
     android:orientation="vertical" >
-
+    <include layout="@layout/include_titlebar"/>
     <TextView 
         style="@style/TextViewSubhead"
         android:text="发现"
