--- a/src/main/res/layout/include_titlebar.xml
+++ b/src/main/res/layout/include_titlebar.xml
@@ -3,27 +3,8 @@
     android:id="@+id/rl_titlebar"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:background="@color/white"
+    android:background="@color/bg_dark"
     android:orientation="horizontal" >
-
-    <ImageView
-        android:id="@+id/titlebar_iv_left"
-        android:layout_width="48dp"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:padding="12dp"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/titlebar_tv_left"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:textColor="@drawable/txtcolor_oran2alpha_sel"
-        android:textSize="@dimen/txtsize_subhead"
-        android:visibility="gone" />
 
     <TextView
         android:id="@+id/titlebar_tv"
@@ -31,27 +12,6 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:maxWidth="224dp" />
-
-    <ImageView
-        android:id="@+id/titlebar_iv_right"
-        android:layout_width="48dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:padding="12dp"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/titlebar_tv_right"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:textColor="@drawable/txtcolor_oran2alpha_sel"
-        android:textSize="@dimen/txtsize_subhead"
-        android:visibility="gone" />
 
     <View
         android:layout_width="match_parent"
