--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textColor">@color/txt_black</item>
+        <item name="android:textColor">@color/txt_emerald</item>
         <item name="android:textSize">@dimen/txtsize_title</item>
     </style>
 
@@ -62,8 +62,9 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:button">@null</item>
         <item name="android:textColor">@drawable/txtcolor_gray2oran_sel</item>
+        <item name="android:textSize">13dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@drawable/buttonstyle</item>
     </style>
 
 </resources>
