--- a/src/main/res/layout/frag_home.xml
+++ b/src/main/res/layout/frag_home.xml
@@ -12,4 +12,9 @@
         android:text="首页"
         />
 
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
