--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -31,4 +31,6 @@
     <color name="bg_gray_bar">#f9f9f9</color>
     <color name="divider_gray">#d7d7d7</color>
 
+    <color name="common_button_textcolor">#FF2196F3</color>
+
 </resources>
