--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="txtsize_subhead">16sp</dimen>
     <dimen name="txtsize_body">14sp</dimen>
     <dimen name="txtsize_caption">12sp</dimen>
+    <dimen name="horizontal_1dp">1dp</dimen>
 
 </resources>
