--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -1,9 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:background="@color/bg_dark"
+              android:orientation="vertical" >
 
+    <FrameLayout
+        android:id="@+id/fl_sign"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/bg_dark" />
+
+    <RadioGroup
+        android:id="@+id/rg_sign_tab"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom"
+        android:background="@color/bg_dark"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <RadioButton
+            android:id="@+id/rb_sign_in"
+            style="@style/RadioButtonBottomTab"
+            android:checked="true"
+            android:text="登录" />
+
+        <RadioButton
+            android:id="@+id/rb_sign_up"
+            style="@style/RadioButtonBottomTab"
+            android:text="注册" />
+
+    </RadioGroup>
 
 </LinearLayout>
