--- a/src/main/res/layout/frag_signin.xml
+++ b/src/main/res/layout/frag_signin.xml
@@ -6,9 +6,81 @@
     android:orientation="vertical" >
 
     <include layout="@layout/include_titlebar"/>
-    
-    <TextView 
-        style="@style/TextViewSubhead"
-        android:text="登录"
-        />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_title"
+            android:textColor="@color/txt_white"
+            android:paddingTop="@dimen/padding_top_50dp"
+            android:paddingBottom="@dimen/padding_bottom_50dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:paddingLeft="3dp"
+            android:inputType="text"
+            android:singleLine="true"
+            android:hint="@string/username"
+            android:textColor="@color/orange_dark"
+            android:textColorHint="@color/txt_at_blue"
+            style="@style/my_edittext_style"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:paddingLeft="3dp"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:hint="@string/password"
+            android:textColor="@color/orange_dark"
+            android:textColorHint="@color/txt_at_blue"
+            style="@style/my_edittext_style"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:background="@color/txt_emerald"
+            android:textColor="@color/txt_white"
+            android:text="@string/login" />
+    </LinearLayout>
 </LinearLayout>
