--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="horizontal_1dp">1dp</dimen>
     <dimen name="padding_top_50dp">50dp</dimen>
     <dimen name="padding_bottom_50dp">50dp</dimen>
+    <dimen name="padding_top_200dp">200dp</dimen>
 
 </resources>
