--- a/src/main/res/layout/frag_user.xml
+++ b/src/main/res/layout/frag_user.xml
@@ -5,8 +5,23 @@
     android:background="@color/bg_dark"
     android:orientation="vertical" >
     <include layout="@layout/include_titlebar"/>
-    <TextView 
-        style="@style/TextViewSubhead"
-        android:text="我的"
-        />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:background="@color/txt_emerald"
+            android:textColor="@color/txt_white"
+            android:text="@string/logout" />
+    </LinearLayout>
 </LinearLayout>
