--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="txt_black">#232323</color>
     <color name="txt_gray">#565656</color>
     <color name="txt_white">#ecf0f1</color>
-    <color name="txt_emerald">#ccff00</color>
+    <color name="txt_emerald">#B5E61D</color>
     <color name="txt_light_gray">#898989</color>
 
     <color name="bg_gray">#f2f2f2</color>
