--- a/src/main/res/layout/frag_message.xml
+++ b/src/main/res/layout/frag_message.xml
@@ -6,9 +6,10 @@
     android:orientation="vertical" >
 
     <include layout="@layout/include_titlebar"/>
-    
-    <TextView 
-        style="@style/TextViewSubhead"
-        android:text="消息"
-        />
+
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_dark" />
 </LinearLayout>
