--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:layout_gravity="bottom"
-        android:background="@color/bg_dark"
+        android:background="@color/bg_lime"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
