--- a/src/main/res/layout/include_titlebar.xml
+++ b/src/main/res/layout/include_titlebar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/rl_titlebar"
     android:layout_width="match_parent"
     android:layout_height="48dp"
-    android:background="@color/bg_dark"
+    android:background="@color/bg_lime"
     android:orientation="horizontal" >
 
     <TextView
