--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -16,12 +16,15 @@
     <color name="orange_dark">#d46303</color>
 
     <color name="txt_black">#232323</color>
-    <color name="txt_gray">#565656</color>
+    <color name="txt_gray">#404040</color>
+    <color name="txt_lime">#9ce159</color>
+    <color name="txt_alizarin">#e74d3d</color>
     <color name="txt_white">#ecf0f1</color>
     <color name="txt_emerald">#B5E61D</color>
     <color name="txt_light_gray">#898989</color>
 
-    <color name="bg_gray">#f2f2f2</color>
+    <color name="bg_gray">#404040</color>
+    <color name="bg_lime">#9ce159</color>
     <color name="bg_gray_dark">#cdcdcd</color>
     <color name="bg_dark">#2E2E2E</color>
     <color name="bg_agray">#49dddddd</color>
