--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
-        <item name="android:textColor">@color/txt_emerald</item>
+        <item name="android:textColor">@color/txt_gray</item>
         <item name="android:textSize">@dimen/txtsize_title</item>
     </style>
 
