--- a/src/main/res/layout/frag_user.xml
+++ b/src/main/res/layout/frag_user.xml
@@ -13,15 +13,21 @@
         android:orientation="vertical">
         <Button
             android:id="@+id/btnLogout"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
-            android:background="@color/txt_emerald"
+            android:background="#7f8c8d"
             android:textColor="@color/txt_white"
             android:text="@string/logout" />
     </LinearLayout>
+
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_dark" />
 </LinearLayout>
