--- a/src/main/res/layout/frag_signin.xml
+++ b/src/main/res/layout/frag_signin.xml
@@ -1,86 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bg_dark"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/bg_dark"
+              android:orientation="vertical" >
 
     <include layout="@layout/include_titlebar"/>
+
+
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_title"
-            android:textColor="@color/txt_white"
-            android:paddingTop="@dimen/padding_top_50dp"
-            android:paddingBottom="@dimen/padding_bottom_50dp"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+            android:layout_marginLeft="10dp"
+            android:textColor="#2c3e50"
+            android:text="@string/phone"
+            android:textSize="14sp" />
         <EditText
             android:id="@+id/username"
-            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingTop="7dp"
-            android:paddingBottom="7dp"
-            android:paddingLeft="3dp"
-            android:inputType="text"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:inputType="phone"
             android:singleLine="true"
             android:hint="@string/username"
-            android:textColor="@color/orange_dark"
-            android:textColorHint="@color/txt_at_blue"
+            android:textColor="@color/bg_gray_dark"
+            android:textColorHint="@color/bg_gray_dark"
             style="@style/my_edittext_style"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <View android:layout_height="1px" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/passwd"
+            android:textColor="#2c3e50"
+            android:layout_marginLeft="10dp"
+            android:textSize="14sp" />
         <EditText
             android:id="@+id/password"
-            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingTop="7dp"
-            android:paddingBottom="7dp"
-            android:paddingLeft="3dp"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="10dp"
             android:inputType="textPassword"
             android:singleLine="true"
             android:hint="@string/password"
-            android:textColor="@color/orange_dark"
-            android:textColorHint="@color/txt_at_blue"
+            android:textColor="@color/bg_gray_dark"
+            android:textColorHint="@color/bg_gray_dark"
             style="@style/my_edittext_style"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <View android:layout_height="1px" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingTop="7dp"
-            android:paddingBottom="7dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:background="@color/txt_emerald"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="#7f8c8d"
             android:textColor="@color/txt_white"
-            android:text="@string/login" />
+            android:textSize="12sp"
+            android:text="@string/signin" />
     </LinearLayout>
 </LinearLayout>
