--- a/src/main/res/layout/include_titlebar.xml
+++ b/src/main/res/layout/include_titlebar.xml
@@ -12,7 +12,16 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:maxWidth="224dp" />
-
+    <ImageView
+        android:id="@+id/titlebar_iv_right"
+        android:layout_width="48dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:padding="12dp"
+        android:clickable="true"
+        android:visibility="visible"
+        />
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
