--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -28,18 +28,20 @@
         <RadioButton
             android:id="@+id/rb_home"
             style="@style/RadioButtonBottomTab"
-            android:checked="true"
-            android:text="挑战" />
+            android:checked="false"
+            android:text="首字母" />
 
         <RadioButton
             android:id="@+id/rb_meassage"
             style="@style/RadioButtonBottomTab"
-            android:text="战绩" />
+            android:text="战绩"
+            android:visibility="gone"/>
 
         <RadioButton
             android:id="@+id/rb_user"
             style="@style/RadioButtonBottomTab"
-            android:text="设置" />
+            android:text="设置"
+            android:visibility="gone"/>
     </RadioGroup>
 
 </LinearLayout>
